Revert "fix: align banner text on y"
This reverts commit bce0f08fdf0337ae0a701891c5409f05a20b93bd.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,10 @@
   background-image: url("../img/ai-generated-beach.webp");
   background-position: center;
   background-size: cover;
-  /* background-attachment: fixed;
-  width: 100%; */
-  height: 30vh;
 }
 
 .navbar {
   --bs-navbar-nav-link-padding-x: 0.7rem;
-  --bs-navbar-padding-y: 0;
 }
 
 .my-btn {
